--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           <div class="p-2"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
           <div class="p-2"><a href="http://strava.com/athletes/10225865" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a></div>
           <div class="p-2"><a href="https://www.youtube.com/channel/UC6JzdYelcu9M9A-flCpVOEQ"><img src="./assets/icons/youtube32.png"></a></div>
-          <div class="p-2"><a href="https://www.linkedin.com/in/ian-webster-1918b1158/"><img src="./assets/icons/linkedin32.png"></a></div>
+          <div class="p-2"><a href="https://www.linkedin.com/in/ian-webster28/"><img src="./assets/icons/linkedin32.png"></a></div>
           <div class="p-2"><a href="https://devpost.com/iWebster28?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src="./assets/icons/devpost32.png"></a></div>
           <div class="p-2"><a href="https://jazz.skule.ca"><img src="./assets/icons/skule_music16.png"></a></div>
           <div class="p-2"><a href="https://github.com/iWebster28"><img src="./assets/icons/github32.png"></a></div>
