Allow transfparency == false

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
         <a href="{{ '/Cayman/contact.html' }}" class="btn">Contact</a>
         
         <div class="d-flex justify-content-center">
-          <div class="p-2"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
+          <div class="p-2"><iframe allowtransparency="false" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
           <div class="p-2"><a href="http://strava.com/athletes/10225865" class="strava-badge- strava-badge-follow" target="_blank"><img src="//badges.strava.com/echelon-sprite-32.png" alt="Strava" /></a></div>
           <div class="p-2"><a href="https://www.youtube.com/channel/UC6JzdYelcu9M9A-flCpVOEQ"><img src="./assets/icons/youtube32.png"></a></div>
           <div class="p-2"><a href="https://www.linkedin.com/in/ian-webster28/"><img src="./assets/icons/linkedin32.png"></a></div>
