--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+      <h2><a id="new-website" src="https://www.ianwebster.ca">ianwebster.ca</a></h2>
 
       {% if site.show_downloads %}
         <a href="{{ '/Cayman/index.html' }}" class="btn">Home</a>
