--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,7 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a id="new-website" href="https://www.ianwebster.ca"><h2 class="project-tagline">ianwebster.ca</h2></a>
+      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }} <a id="new-website" href="https://www.ianwebster.ca"></a></h2>
 
       {% if site.show_downloads %}
         <a href="{{ '/Cayman/index.html' }}" class="btn">Home</a>
