--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,13 +31,14 @@
 
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }} <a id="new-website" href="https://www.ianwebster.ca">New site!</a></h2>
+      <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
 
       {% if site.show_downloads %}
         <a href="{{ '/Cayman/index.html' }}" class="btn">Home</a>
         <a href="{{ '/Cayman/project-library.html' }}" class="btn">Projects</a>
         <a href="{{ '/Cayman/jazz.html' }}" class="btn">Jazz</a>
         <a href="{{ '/Cayman/contact.html' }}" class="btn">Contact</a>
+        <a href="https://www.ianwebster.ca" class="btn">New Site!</a>
         
         <div class="d-flex justify-content-center">
           <div class="p-2"><iframe allowtransparency="false" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fiwebsterproductions&color=orange_white&size=32" style="width: 32px; height: 32px;"></iframe></div>
